# kube-pod-watcher

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
