[package]
name = "kube-pod-watcher"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
  "Lassi Pölönen <lassi.polonen@iki.fi>"
]


[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
kube = { version = "0.87.1", default-features = false, features = ["client", "runtime", "openssl-tls"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.75"
futures = "0.3.29"
